# docs/swagger.json
@@ -64,7 +64,7 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     },
                     "422": {
@@ -153,7 +153,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     }
                 }
@@ -243,13 +243,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     }
                 }
@@ -310,13 +310,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     }
                 }
@@ -357,19 +357,74 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.SimpleResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/galleries/{group_code}/force": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Permanently delete all galleries with the specified group code",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "galleries"
+                ],
+                "summary": "Permanently delete galleries by group code",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Group Code",
+                        "name": "group_code",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Size (original, small, medium, large)",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.SimpleResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     }
                 }
@@ -424,13 +479,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     }
                 }
@@ -465,31 +520,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/internal_controllers.GallerySwagger"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.SimpleResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     }
                 }
@@ -526,31 +569,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/internal_controllers.GallerySwagger"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.SimpleResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     }
                 }
@@ -605,13 +636,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/nova-cdn_pkg_utils.Response"
+                            "$ref": "#/definitions/nova-cdn_pkg_utils.ErrorSimpleResponse"
                         }
                     }
                 }
@@ -678,6 +709,18 @@
                 }
             }
         },
+        "nova-cdn_pkg_utils.ErrorSimpleResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": false
+                }
+            }
+        },
         "nova-cdn_pkg_utils.Meta": {
             "type": "object",
             "properties": {
@@ -728,6 +771,18 @@
                 }
             }
         },
+        "nova-cdn_pkg_utils.SimpleResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
         "nova-cdn_pkg_utils.ValidationErrorResponse": {
             "type": "object",
             "properties": {
@@ -741,10 +796,12 @@
                     }
                 },
                 "message": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Validation error"
                 },
                 "success": {
-                    "type": "boolean"
+                    "type": "boolean",
+                    "example": false
                 }
             }
         }
